--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -40,6 +40,7 @@ Building a better future, one line of code at a time.
 
 // · Configuration & variables
 @import "../settings/variables";
+@import "../settings/lesli-chart-colors";
 
 
 // · LesliView components & elements 
