--- a/lib/scss/settings/lesli-chart-colors.scss
+++ b/lib/scss/settings/lesli-chart-colors.scss
@@ -31,14 +31,14 @@ Building a better future, one line of code at a time.
 @import "lesli-css";
 
 .charts-css {
-    --color-1: #64baff;
-    --color-2: yellow;
-    --color-3: rgba(yellow, 0.5);
-    --color-4: rgba(yellow, 0.6);
-    --color-5: rgba(yellow, 1.0);
-    --color-6: rgba(yellow, 1.0);
-    --color-7: rgba(yellow, 0.8);
-    --color-8: rgba(yellow, 0.6);
-    --color-9: rgba(yellow, 0.4);
-    --color-10: rgba(yellow, 0.2);
+    --color-1: #{lesli-css-color(blue, 300)};
+    --color-2: #{lesli-css-color(mint, 300)};
+    --color-3: #{lesli-css-color(grape, 300)};
+    --color-4: #{lesli-css-color(lime, 300)};
+    --color-5: #{lesli-css-color(bubble, 300)};;
+    --color-6: #{lesli-css-color(orange, 300)};
+    --color-7: #{lesli-css-color(banana, 300)};
+    --color-8: #{lesli-css-color(slate, 300)};
+    --color-9: #{lesli-css-color(cocoa, 300)};
+    --color-10: #{lesli-css-color(berry, 300)};
 }
