include javascript from lesli assets

--- a/app/assets/stylesheets/lesli/templates/application.css
+++ b/app/assets/stylesheets/lesli/templates/application.css
@@ -31960,3 +31960,4 @@ body {
 h1, h2, h3, h4, h5, h6, a {
   font-family: "Domine", "OpenSans", "Ubuntu", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
+[x-cloak] { display: none !important; }
