--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -36,8 +36,9 @@ Building a better future, one line of code at a time.
     <%= render partial: "lesli/partials/application-head" %>
     <%= render partial: "lesli/partials/application-data" %>
     <%= render partial: "lesli/partials/application-lesli-scss" %>
+    <%= render(partial: "lesli/partials/application-lesli-javascript") %>
 </head>
-<body data-turbo="true" class="<%= application_body_class %>">
+<body  class="<%= application_body_class %>">
     <%= render partial: "lesli/partials/application-lesli-header" %>
     <%= render partial: "lesli/partials/application-lesli-navigation" %>
     <%= render partial: "lesli/partials/application-lesli-notifications" %>
@@ -45,7 +46,6 @@ Building a better future, one line of code at a time.
         <%= render partial: "lesli/partials/application-lesli-sidebar" %>
         <%= render partial: "lesli/partials/application-lesli-content" %>
     </main>
-    <%= render partial: "lesli/partials/application-lesli-javascript" %>
     <%= render partial: "lesli/partials/application-lesli-icons" %>
     <%#= render partial: "lesli/partials/application-analytics" %>
 </body>
