migrate to LesliAssets gem

--- a/app/views/lesli/partials/_application-lesli-scss.html.erb
+++ b/app/views/lesli/partials/_application-lesli-scss.html.erb
@@ -55,6 +55,6 @@ Building a better future, one line of code at a time.
 
 
 <%# Loading stylesheets %> 
-<%= stylesheet_link_tag lesli_application_stylesheet_path(:lesli), media: "all" %>
+<%= stylesheet_link_tag lesli_application_stylesheet_path(:lesli_assets), media: "all" %>
 <%= stylesheet_link_tag lesli_application_stylesheet_path(), media: "all" %>
 
