--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -33,20 +33,21 @@ Building a better future, one line of code at a time.
 <!DOCTYPE html>
 <html>
 <head>
-    <%= render partial: "lesli/partials/application-head" %>
-    <%= render partial: "lesli/partials/application-data" %>
-    <%= render partial: "lesli/partials/application-lesli-scss" %>
+    <%= render(partial: "lesli/partials/application-head") %>
+    <%= render(partial: "lesli/partials/application-data") %>
+    <%= render(partial: "lesli/partials/application-lesli-scss") %>
     <%= render(partial: "lesli/partials/application-lesli-javascript") %>
 </head>
 <body  class="<%= application_body_class %>">
-    <%= render partial: "lesli/partials/application-lesli-header" %>
-    <%= render partial: "lesli/partials/application-lesli-navigation" %>
-    <%= render partial: "lesli/partials/application-lesli-notifications" %>
+    <%= render(partial: "lesli/partials/application-lesli-header") %>
+    <%= render(partial: "lesli/partials/application-lesli-navigation") %>
+    <%= render(partial: "lesli/partials/application-lesli-notifications") %>
     <main class="lesli-application-app">
-        <%= render partial: "lesli/partials/application-lesli-sidebar" %>
-        <%= render partial: "lesli/partials/application-lesli-content" %>
+        <%= render(partial: "lesli/partials/application-lesli-sidebar") %>
+        <%= render(partial: "lesli/partials/application-lesli-content") %>
     </main>
-    <%= render partial: "lesli_assets/partials/application-lesli-icons" %>
-    <%#= render partial: "lesli/partials/application-analytics" %>
+    <%= render(partial: "lesli_assets/partials/application-lesli-icons-engines") %>
+    <%#= render(partial: "lesli/partials/application-analytics" %>
+    <%= yield(:application_lesli_body_bottom) %>
 </body>
 </html>
