add dashboard shared elements

--- a/app/views/lesli/apps/show.html.erb
+++ b/app/views/lesli/apps/show.html.erb
@@ -25,6 +25,7 @@ document.addEventListener('turbo:load', () => {
 
                 <%# 03. Productivity & Teamwork%>
                 <%= navigation_engine_calendar %>
+                <%= navigation_engine_dashboard %>
                 <%= navigation_engine_bell %>
                 <%= navigation_engine_papers %>
 
