enable analytics with support to env

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -47,7 +47,7 @@ Building a better future, one line of code at a time.
         <%= render(partial: "lesli/partials/application-lesli-content") %>
     </main>
     <%= render(partial: "lesli_assets/partials/application-lesli-icons-engines") %>
-    <%#= render(partial: "lesli/partials/application-analytics" %>
+    <%= render(partial: "lesli/partials/application-analytics") %>
     <%= yield(:application_lesli_body_bottom) %>
 </body>
 </html>
