--- a/app/views/lesli/abouts/welcome.html.erb
+++ b/app/views/lesli/abouts/welcome.html.erb
@@ -125,8 +125,11 @@ html, body, * {
             Getting started
         </a>
     </div>
-    <%= link_to("Apps", "/lesli/apps") unless defined?(LesliDashboard) %>
+    <% unless defined?(LesliShield) %>
+        <%= link_to("Apps", "/lesli/apps") unless defined?(LesliDashboard) %>
+    <% end %>
     <% if defined?(LesliShield) %>
+        <%= link_to("Apps", "/lesli/apps") if user_signed_in? && defined?(LesliDashboard) %>
         <%= link_to("Dashboard", "/dashboard") if user_signed_in? && defined?(LesliDashboard) %>
         <%= link_to("Logout", "/logout") if user_signed_in? %>
         <%= link_to("Login", "/login") unless user_signed_in? %>
